<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nivel_studii"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner_nivel_studii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lista_nivel_studii" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/color_grey_delimitare" />

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_specializare"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner_specializare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/color_grey_delimitare" />

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anul"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner_an_studiu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/ani_studii_licenta" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/color_grey_delimitare" />

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/grupe"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_grupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_check_grupa" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/color_grey_delimitare" />

        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/nume_grup"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_denumire_grup"/>

        <Button
            android:id="@+id/btn_adauga_grup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="130dp"
            android:text="@string/creeaza_grupul" />
    </LinearLayout>
</ScrollView>